<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eaedf2">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/anpassen_relative_top"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/title_taetigkeit_anpassen"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"
            android:text="@string/title_act_anpassen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textAllCaps="true"
            android:gravity="center"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/anpassen_linearbox"
            android:layout_below="@+id/title_taetigkeit_anpassen"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <!--Tätigkeit-->
            <TextView
                android:id="@+id/hint_act_anpassen_taetigkeit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:text="@string/hint_act_anpassen_taetigkeit"/>
            <EditText
                android:id="@+id/anpassen_taetigkeit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/typingbox"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:textSize="16dp"
                android:hint="@string/box_act_anpassen_taetigkeit"
                android:inputType="textCapSentences"/>

            <!--Geschafft und Ziel-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">
                <TextView
                    android:id="@+id/hint_act_anpassen_anzahl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000000"
                    android:text="@string/hint_act_anpassen_anzahl"/>
                <TextView
                    android:id="@+id/hint_act_anpassen_targetValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:textColor="#000000"
                    android:text="@string/hint_act_anpassen_targetValue"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/anpassen_anzahl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/typingbox"
                    android:layout_margin="10dp"
                    android:padding="20dp"
                    android:textSize="16dp"
                    android:inputType="numberDecimal"
                    android:hint="@string/box_act_anpassen_anzahl"/>
                <EditText
                    android:id="@+id/anpassen_targetValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/typingbox"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:textSize="16dp"
                    android:inputType="numberDecimal"
                    android:hint="@string/box_act_anpassen_targetValue"/>
            </LinearLayout>

            <!--Einheit-->
            <TextView
                android:id="@+id/hint_act_anpassen_einheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:text="@string/hint_act_anpassen_einheit"/>
            <EditText
                android:id="@+id/anpassen_einheit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/typingbox"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:textSize="16dp"
                android:hint="@string/box_act_anpassen_einheit"
                android:inputType="textCapSentences"/>

            <!--Radio buttons Grenze-->
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">
                <RadioButton android:id="@+id/radio_upper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/radioUpper"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_lower"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/radioLower"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <!--Buttons-->
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <Button
                    android:id="@+id/ziel_speichern_orig"
                    android:text="@string/btn_act_anpassen_speichern"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_orange" />
                <LinearLayout
                    android:id="@+id/buttons2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">
                    <Button
                        android:id="@+id/ziel_loeschen"
                        android:text="@string/btn_act_anpassen_loeschen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/button_red"/>
                    <Button
                        android:id="@+id/ziel_speichern"
                        android:text="@string/btn_act_anpassen_speichern"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/button_orange"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/buttons1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">
                    <Button
                        android:id="@+id/ziel_anpassen1"
                        android:text="@string/btn_act_anpassen_anpassen1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/button_green"/>
                    <Button
                        android:id="@+id/ziel_aktualisieren1"
                        android:text="@string/btn_act_anpassen_aktualisieren1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/button_orange"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>