<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eaedf2">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/icon"
            android:text="ICON"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="#009688"/>

        <!--Email Input-->
        <EditText
            android:id="@+id/login_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/typingbox"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:textSize="16dp"
            android:hint="@string/hint_act_login_email"
            android:maxLines="1"
            android:singleLine="true" />
        <!--Password Input-->
        <EditText
            android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/typingbox"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:textSize="16dp"
            android:hint="@string/hint_act_login_password"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textPassword"
            android:fontFamily="sans-serif" />
        <!--Password check-->
        <EditText
            android:id="@+id/login_passwordConfirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/typingbox"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:textSize="16dp"
            android:hint="@string/hint_act_login_passwordConfirm"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:visibility="gone"/>
        <!-- Login button -->
        <Button android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_act_login_button"
            android:layout_margin="10dp"
            android:paddingRight="60dp"
            android:paddingLeft="60dp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:background="@drawable/button_green"/>
        <!-- Register button -->
        <Button android:id="@+id/login_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_act_login_reg"
            android:layout_margin="10dp"
            android:paddingRight="45dp"
            android:paddingLeft="45dp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:background="@drawable/button_orange"/>
        <LinearLayout
            android:id="@+id/login_hiddenButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">
            <!-- Cancel button -->
            <Button android:id="@+id/login_hiddenCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_act_login_hiddenCancel"
                android:layout_margin="10dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:background="@drawable/button_red"/>
            <!-- Save button -->
            <Button android:id="@+id/login_hiddenSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_act_login_hiddenSave"
                android:layout_margin="10dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:background="@drawable/button_orange"/>
            ></LinearLayout>
    </LinearLayout>



</ScrollView>